--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  <html>
+<head>
+  <meta http-equiv="refresh" content="0; URL='xn.html'" />
+  <title>Redirecting...</title>
+</head>
+<body>
+  <p>Redirecting to <a href="index.html">xn.html</a></p>
+</body>
 <head>
   <meta charset="UTF-8" />
   <meta name="description" content="Portfolio of Devireddy Vivek Reddy" />
